--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -4,79 +4,286 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
+    <!-- 부트스트랩 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+
     <!-- 구글폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/board.css">
+
     <style>
-*{
-	font-family: 'Gothic A1', sans-serif;
-}
-body {
-	width: 1024px;
-	height: 860px;
-	margin: 50px auto;
-	overflow: auto;
-	max-height: 860px;
-}
+        main>.update{
+            margin-top : 50px;
+            margin-left : 16%;
+            width : 450px;
+            margin-bottom : 50px;
+        }
 
-header{
+        main>.update>h2{
+            margin-bottom : 40px;
+        }
 
-}
+        main>.update>.update-img{
+            display : flex;
+            height : 150px;
+            align-items: center;
+            border-bottom : 1px solid rgb(188, 188, 188);
+            margin-bottom : 50px;
+            padding-bottom : 50px;
+        }
 
-.top-header{
-    display : flex;
-    padding-left : 50px;
-}
+        main>.update>.update-img>.profileimg{
+            margin-right : 30px;
+        }
 
-.top-header > a{
-    align-self : center;
-}
+        .mb-3{
+            margin-top : 20px;
+        }
 
-.top-header > h2 {
-    margin-left : 30px;
-}
+        .img-ok{
+            font-size: 0.8rem;
+        }
 
-main{
-    border-top : 1px solid gray;
-    margin-top : 50px;
-}
-</style>
+        .out{
+            margin-top : 50px;
+            padding-top : 50px;
+            border-top : 1px solid rgb(188, 188, 188);
+        }
+
+    </style>
 </head>
-<body>
+<body class="scroll">
+
 <header>
-    <div class="top-header">
-        <a href="/list"> <img src="/images/logo.png" max-width="100%" height="40"/> </a>
-        <h2><a href="/mypage"> <span th:text="${dto.nickname}"></span>'s Page</a> > 내 정보 수정</h2>
+    <div class="menu">
+
+        <div class="logo">
+            <a href="/list"> <img src="/images/logo.png" max-width="100%" height="15"/> </a>
+            <!-- <h2><span th:text="${dto.nickname}"></span>닉네임</h2> -->
+        </div>
+
+        <div class="middle-menu">
+            <a href="/list">
+                <div class="home">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                        <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+                    </svg>홈
+                </div>
+            </a>
+
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                </svg>
+                검색
+            </button>
+
+            <a href="#">
+                <div class="message">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
+                        <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                        <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                    </svg>메시지
+                </div>
+            </a>
+
+            <a href="#" id="notification-icon">
+                <div class="bell">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+                        <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
+                    </svg>알림
+                </div>
+            </a>
+
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>글쓰기
+            </button>
+
+            <a href="/mypage">
+                <div class="mypage" style="font-size : 1.2rem;">
+                    <img th:src="${dto.profile}" style="width:22px;height:22px;border-radius:50%;" />프로필
+                </div>
+            </a>
+        </div>
+
+
+
+        <div class="logout">
+            <form method="post" action="/logout">
+                <button class="logout-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>
+                        <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>
+                    </svg>로그아웃
+                </button>
+            </form>
+        </div>
+
     </div>
 </header>
 
-<main>
-    <form action="/profile/update" method="POST">
-        이메일(ID) : <span sec:authentication="principal.username"></span>
-        <br/>
-        비밀번호 : <a href="/leave">비밀번호 변경하기</a>
-        <br/>
-        <!-- 닉네임 수정 폼 -->
-        <label for="nickname">닉네임 :</label>
-        <input type="text" id="nickname" name="newNickname" th:value="${dto.nickname}">
-        <br/>
+<div class="up">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-square-fill" viewBox="0 0 16 16">
+        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm4 9h8a.5.5 0 0 0 .374-.832l-4-4.5a.5.5 0 0 0-.748 0l-4 4.5A.5.5 0 0 0 4 11z"/>
+    </svg>
+</div>
 
-        생년월일 : <span th:text="${dto.birth}"></span>
-        <br/>
-        <label>휴대폰 :</label>
-        <input type="text" id="phone" name="name" th:value="${dto.phone}">
-        <br/>
-        <label>주소 :</label>
-        <input type="text" id="zipcode" name="name" th:value="${dto.zipcode}"><br>
-        <input type="text" id="addr1" name="name" th:value="${dto.addr1}"><br>
-        <input type="text" id="addr2" name="name" th:value="${dto.addr2}"><br>
-        <br/>
-        <button type="submit">수정</button>
-    </form>
+
+
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+        <h5 id="offcanvasRightLabel">검색</h5>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+
+        <div class="searchbox">
+            <form id="searchForm" method="GET">
+                <select class="form-select" aria-label="Default select example" id="searchOption">
+                    <option value="nickname">닉네임</option>
+                    <option value="content">내용</option>
+                </select>
+                <input type="text" name="keyword" class="form-control" id="searchKeyword">
+                <button type="submit" class="btn btn-outline-secondary" id="searchButton">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg>
+                </button>
+            </form>
+        </div>
+
+    </div>
+</div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">글쓰기</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body">
+
+                <form action="/post" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label>작성자 </label>
+                        <span th:text="${dto.nickname}"></span><br/>
+
+                        <!-- <label for="email">글쓴이 이메일 </label>
+                        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly /> -->
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" type="file" id="formFile" name="files" multiple>
+                        <div class="miri">
+                            미리보기
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="contents"></label>
+                        <textarea id="contents" name="contents" rows="4" required></textarea>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary submit-button">등록</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+<main>
+
+    <div class="update">
+
+        <div class="update-img">
+
+            <div class="profileimg" style="display:flex;justify-content:left; align-items : center;">
+                <img th:src="${dto.profile}" style="width:70px;height:70px;border-radius:50%;" />
+            </div>
+
+            <form id="profileUploadForm" action="/uploadProfile" method="post" enctype="multipart/form-data">
+                <div class="mb-3">
+                    <label for="formFileSm" class="form-label">프로필 사진 변경</label>
+                    <input class="form-control form-control-sm" id="formFileSm" type="file" name="profileImage" accept="image/*">
+                </div>
+                <input class="img-ok" type="submit" value="변경하기">
+            </form>
+
+        </div>
+
+
+        <form action="/profile/update" method="POST">
+            이메일(ID) : <span sec:authentication="principal.username"></span>
+            <br/>
+            비밀번호 : <a href="/leave">비밀번호 변경하기</a>
+            <br/>
+            <!-- 닉네임 수정 폼 -->
+            <label for="nickname">닉네임 :</label>
+            <input type="text" id="nickname" name="newNickname" th:value="${dto.nickname}">
+            <button class="jung-btn" onclick="checkNicknameDuplicate('nickname')">중복체크</button>
+            <br/>
+
+            생년월일 : <input name="birth" id="birthInput" autocomplete="off" th:value="${dto.birth}">
+            <br/>
+            <label>휴대폰 :</label>
+            <input type="text" id="phone" name="name" th:value="${dto.phone}">
+            <br/>
+            <label>주소 :</label>
+            <input type="text" id="zipcode" name="name" th:value="${dto.zipcode}"><br>
+            <input type="text" id="addr1" name="name" th:value="${dto.addr1}"><br>
+            <input type="text" id="addr2" name="name" th:value="${dto.addr2}"><br>
+            <br/>
+            <button type="submit">수정</button>
+        </form>
+
+        <div class="out">
+            <a href="/profile/leave_auth">회원탈퇴</a>
+        </div>
+
+    </div>
+
 </main>
-<hr/>
-<a href="/profile/leave_auth">회원탈퇴</a>
+
+<script>
+    // <!--닉네임 중복체크-->
+    function checkNicknameDuplicate(nickname) {
+        const inputValue = $("#" + nickname).val();
+        $.ajax({
+            url: "/checkNicknameDuplicate",
+            type: "POST",
+            data: {value: inputValue, field: newNickname},
+            success: function (response) {
+                if (response.duplicate) {
+                      alert("이미 존재하는 닉네임입니다.");
+                      isNicknameChecked = false;
+                } else {
+                    alert("사용 가능한 닉네임입니다.");
+                    isNicknameChecked = true;
+                }
+            },
+            error: function (xhr, status, error) {
+                console.error("오류 발생 : ", error);
+                isNicknameChecked = false;
+            }
+        });
+    }
+
+</script>
+
 </body>
 </html>
