--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -32,32 +32,23 @@
 
         .notification {
             display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            border-top: 1px solid #ccc;
+            flex-direction: column;
             border-bottom: 1px solid #ccc;
-            margin-bottom: 10px;
-            padding: 10px;
+            margin-bottom: 5px;
+            padding: 5px;
         }
 
-        .notification p {
+        .notification div {
             margin: 0;
         }
 
-        .notification .email {
-            flex: 1;
-            margin-right: 10px;
-            font-weight: bold;
-            width : 50px;
+        .notification>.nickname{
+
         }
 
-        .notification .message {
-            flex: 2;
-            margin-right: 10px;
-        }
-
-        .notification .date {
-            flex: 1;
+        .notification>.date{
+            font-size : 0.5rem;
+            color : gray;
         }
 
         .notification>a{
